challenge/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-container
    image: busybox:latest
    command: ["sleep", "86400"]
    volumeMounts:
      - name: movies-data
        mountPath: /var/lib/mysql
  volumes:
    - name: movies-data
      persistentVolumeClaim:
        claimName: movies-data-movies-mysql-0
  restartPolicy: Never
