challenge/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-backend-svc
  labels:
    app: movies
    tier: backend
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: movies
    tier: backend
