challenge/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-frontend-svc
  labels:
    app: movies
    tier: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: movies
    tier: frontend
