challenge/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-mysql-svc
  labels:
    app: movies
    tier: mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: movies-mysql
    tier: mysql
